# EquibChain

./: Anchor.toml  README.md  biome.json  package.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/agent/: package.json  tsconfig.json
apps/agent/src/: index.ts
apps/agent/src/agents/: fraud-detection-agent.ts  pool-manager-agent.ts  scoring-agent.ts
apps/agent/src/config/: index.ts
apps/agent/src/utils/: logger.ts
apps/agent/src/x402/: mock-server.ts
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/pools/[id]/: page.tsx
apps/web/src/components/: hero-scene.tsx  network-globe.tsx  pool-flow-visualization.tsx
apps/web/src/providers/: query-provider.tsx  solana-provider.tsx  wallet-adapter-provider.tsx
programs/equbchain/: Cargo.toml
programs/equbchain/src/: lib.rs
programs/equbchain/src/errors/: mod.rs
programs/equbchain/src/events/: mod.rs
programs/equbchain/src/instructions/: contribute.rs  disburse.rs  emergency_close.rs  initialize_pool.rs  join_pool.rs  mod.rs  pause_pool.rs  resume_pool.rs  set_scoring_authority.rs  slash_defaulter.rs  update_member_score.rs
programs/equbchain/src/state/: mod.rs
programs/equbchain/tests/: equbchain.test.ts  helpers.ts
tests/: equbchain.ts
